--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,54 @@
 <div class="container">
   <div class="row">
-    <div class="column">
+    <div class="column" style="text-align: center;width: 100%;margin-top: 20px;">
+
+      <!-- Sidebar -->
+      <div class="w3-sidebar w3-light-grey w3-bar-block side-left-border" style="width:22%">
+        <img alt="" width="200" height="200"  src="/assets/user-profile-default.png">
+      </div>
+
+      <!-- Page Content -->
+      <div style="margin-left:27%">
+
+        <div class="tab">
+          <button class="tablinks" onclick="openCity(event, 'London')">Solve Captcha</button>
+          <button class="tablinks" onclick="openCity(event, 'Paris')">Available Balance</button>
+          <button class="tablinks" onclick="openCity(event, 'Tokyo')">Request Payout</button>
+        </div>
+
+        <div id="London" class="tabcontent">
+          <h3>Solve Captcha</h3>
+          <p>Solve Captcha.</p>
+        </div>
+
+        <div id="Paris" class="tabcontent">
+          <h3>Available Balance</h3>
+          <p>Available Balance.</p>
+        </div>
+
+        <div id="Tokyo" class="tabcontent">
+          <h3>Request Payout</h3>
+          <p>Request Payout.</p>
+        </div>
+
+        <script>
+            function openCity(evt, cityName) {
+                var i, tabcontent, tablinks;
+                tabcontent = document.getElementsByClassName("tabcontent");
+                for (i = 0; i < tabcontent.length; i++) {
+                    tabcontent[i].style.display = "none";
+                }
+                tablinks = document.getElementsByClassName("tablinks");
+                for (i = 0; i < tablinks.length; i++) {
+                    tablinks[i].className = tablinks[i].className.replace(" active", "");
+                }
+                document.getElementById(cityName).style.display = "block";
+                evt.currentTarget.className += " active";
+            }
+        </script>
+
+
+      </div>
 
     </div>
   </div>
