-edit user index

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,9 @@
       <!-- Sidebar -->
       <div class="w3-sidebar w3-light-grey w3-bar-block side-left-border" style="width:22%">
         <img alt="" width="200" height="200"  src="/assets/user-profile-default.png">
+
+        <input type="submit" name="commit" value="Activate Account" >
+
       </div>
 
       <!-- Page Content -->
