--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,11 @@
         border: 1px solid #ccc;
       }
     </style>
+    <script>
+            var submitInvisibleRecaptchaForm = function () {
+                document.getElementById("invisible_recaptcha_form").submit();
+            };
+    </script>
   </head>
   <body>
 
