--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,24 @@
 
         border: 1px solid #ccc;
       }
+
+      .home-button {
+        color: #fff;
+        background-color: #286090;
+        border-color: #204d74;
+        border-radius: 4px;
+        border: 1px solid transparent;
+      }
+
+      .home-button:hover {
+        color: #fff;
+        background-color: #204d74;
+        border-color: #122b40;
+        border-radius: 4px;
+        border: 1px solid transparent;
+      }
+
+
     </style>
     <script>
             var submitInvisibleRecaptchaForm = function () {
