--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,9 +36,8 @@
 
         </div>
 
-        <div id="Paris" class="tabcontent">
-          <h3>Available Balance</h3>
-          <p>Available Balance.</p>
+        <div id="Paris" class="tabcontent" style="text-align: left">
+          <h3>$ 0.00</h3>
         </div>
 
         <div id="Tokyo" class="tabcontent">
